--- a/trunk/Languages/default-ru.xml
+++ b/trunk/Languages/default-ru.xml
@@ -2561,7 +2561,7 @@
 	<string id="8304" value="Н/Д"/>
 	<string id="8306" value="Путь"/>
 	<string id="8307" value="Тип"/>
-	<string id="8308" value="Разм."/>
+	<string id="8308" value="Размер"/>
 	<string id="8309" value="Частичный источник (%.2f%% доступно)"/>
 	<string id="8310" value="%i слота(ов) выгрузки, %i - в очереди"/>
 	<string id="8311" value="В Вашем хранилище этот файл уже имеется."/>
@@ -3114,7 +3114,7 @@
 		<control/>
 		<control caption="_Трей:"/>
 		<control caption="Когда щелкаю закрыть:"/>
-		<control caption="Спрашивать|Сразу закрыть|Отправить в трей|Закр. после пересылок"/>
+		<control caption="Спрашивать|Сразу закрыть|Отправить в трей|Закрыть после пересылок"/>
 		<control caption="Когда щелкаю свернуть:"/>
 		<control caption="Обычное действие|Отправить в трей"/>
 		<control caption="Скрыть панель поиска начав поиск"/>
